--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ keywords = ["cache", "async"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = "1.6.4"
+async-std = { version = "1.6.5", features = ["attributes"] }
