--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "r-cache"
-version = "0.4.1"
+version = "0.4.2"
 authors = ["cobbinma <cobbinma@gmail.com>"]
 edition = "2018"
 description = "r-cache is an in memory key value store. It is thread safe and values have expiry times"
@@ -16,4 +16,7 @@ keywords = ["cache", "async"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-lock = "2.4.0"
+
+[dev-dependencies]
 async-std = { version = "1.9.0", features = ["attributes"] }
