--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "r-cache"
-version = "0.4.5"
+version = "0.5.0"
 authors = ["cobbinma <cobbinma@gmail.com>"]
 edition = "2021"
 description = "r-cache is an in memory key value store. It is thread safe and values have expiry times"
@@ -9,14 +9,13 @@ readme = "README.md"
 repository = "https://github.com/cobbinma/r-cache"
 categories = [
     "caching",
-    "asynchronous"
 ]
-keywords = ["cache", "async"]
+keywords = ["cache"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-lock = "2.4.0"
+dashmap = "5.4"
 
 [dev-dependencies]
 async-std = { version = "1.10.0", features = ["attributes"] }
